Bug 404712 - Drag & drop files from Dolphin into playlist does not work
Summary: Drag & drop files from Dolphin into playlist does not work
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
: 441247 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-02-22 20:24 UTC by t.soernes
Modified: 2021-12-01 11:01 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.04
Sentry Crash Report:


Attachments
attachment-29583-0.html (1.40 KB, text/html)
2019-05-02 20:53 UTC, t.soernes
Details

Note You need to log in before you can comment on or make changes to this bug.
Description t.soernes 2019-02-22 20:24:45 UTC
STEPS TO REPRODUCE
1. Drag an mp3 from Dolphin into Elisa playlist
2. 
3. 

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
Want to add song to playlist

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: Fedora 29, Plasma 5.14
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Matthieu Gallien 2019-05-02 20:51:29 UTC
Thanks for your report.
In general, Elisa is currently not supporting drag'n drop.
In the future that is really desirable.
Are you able to help make this happen ?
Comment 2 t.soernes 2019-05-02 20:53:56 UTC
Created attachment 119801 [details]
attachment-29583-0.html

Sorry, I don't know C or C++

On Thu, May 2, 2019, 22:51 Matthieu Gallien <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=404712
>
> Matthieu Gallien <matthieu_gallien@yahoo.fr> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>      Ever confirmed|0                           |1
>              Status|REPORTED                    |CONFIRMED
>
> --- Comment #1 from Matthieu Gallien <matthieu_gallien@yahoo.fr> ---
> Thanks for your report.
> In general, Elisa is currently not supporting drag'n drop.
> In the future that is really desirable.
> Are you able to help make this happen ?
>
> --
> You are receiving this mail because:
> You reported the bug.
Comment 3 Matthieu Gallien 2019-05-02 21:03:49 UTC
(In reply to t.soernes from comment #2)
> Created attachment 119801 [details]
> attachment-29583-0.html
> 
> Sorry, I don't know C or C++

Well, it is not only about code but also tests or help with bug triaging or anything else.
For example, I have received quite some help with the design, help that made it possible to build the current state of the application (and it was not help with the code).

> 
> On Thu, May 2, 2019, 22:51 Matthieu Gallien <bugzilla_noreply@kde.org>
> wrote:
> 
> > https://bugs.kde.org/show_bug.cgi?id=404712
> >
> > Matthieu Gallien <matthieu_gallien@yahoo.fr> changed:
> >
> >            What    |Removed                     |Added
> >
> > ----------------------------------------------------------------------------
> >      Ever confirmed|0                           |1
> >              Status|REPORTED                    |CONFIRMED
> >
> > --- Comment #1 from Matthieu Gallien <matthieu_gallien@yahoo.fr> ---
> > Thanks for your report.
> > In general, Elisa is currently not supporting drag'n drop.
> > In the future that is really desirable.
> > Are you able to help make this happen ?
> >
> > --
> > You are receiving this mail because:
> > You reported the bug.
Comment 4 Bharadwaj Raju 2021-11-30 16:18:41 UTC
*** Bug 441247 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2021-11-30 16:19:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/305
Comment 6 Nate Graham 2021-11-30 23:25:52 UTC
Git commit b2a43a35846fc83e01ef3cdeb09aecca420cf06e by Nate Graham, on behalf of Bharadwaj Raju.
Committed on 30/11/2021 at 23:25.
Pushed by ngraham into branch 'master'.

Implement dropping music files from file manager onto Playlist
FIXED-IN: 22.04

M  +20   -0    src/elisaapplication.cpp
M  +2    -0    src/elisaapplication.h
M  +9    -0    src/qml/ElisaMainWindow.qml

https://invent.kde.org/multimedia/elisa/commit/b2a43a35846fc83e01ef3cdeb09aecca420cf06e
Comment 7 postix 2021-12-01 11:01:40 UTC
\o/ Thank you! Would have liked to see it in 21.12 but anyway, looking very much forward to it!