Implement dropping music files from file manager onto Playlist

BUG: 404712
FIXED-IN: 22.04